Adding tilt and migrations

--- a/bkmarker/Pages/Shared/_Layout.cshtml
+++ b/bkmarker/Pages/Shared/_Layout.cshtml
@@ -22,8 +22,8 @@
 
     </header>
 
-    <div class="p-5 bg-blue-100">
-      <div class='container mx-auto bg-yellow-100 '>
+    <div class="p-5">
+      <div class='container mx-auto'>
         <main role="main" class="">
             @RenderBody()
         </main>
