--- a/bkmarker/Pages/Index.cshtml
+++ b/bkmarker/Pages/Index.cshtml
@@ -3,12 +3,26 @@
 @{
     ViewData["Title"] = "Home page";
 }
-<a href="#" class="flex flex-col items-center bg-white border border-gray-300 
-  rounded-lg shadow hover:bg-gray-100 ">
-  <img class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-48 md:rounded-none md:rounded-s-lg" src="/docs/images/blog/image-4.jpg" alt="">
-  <div class="flex flex-col justify-between p-4 leading-normal">
-    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">Noteworthy technology acquisitions 2021</h5>
-    <p class="mb-3 font-normal text-gray-700 ">Here are the biggest enterprise technology acquisitions of 2021 so far, in reverse chronological order.</p>
-  </div>
-</a>
+
+@foreach(var bookmark in Model.Bookmarks) 
+{
+  <a 
+    href="#" 
+    class="flex flex-col items-center bg-white border border-gray-300 
+    rounded-lg shadow hover:bg-gray-100 "
+  >
+    <img 
+      class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-48 md:rounded-none md:rounded-s-lg" 
+      src="@bookmark.ImageUrl" alt="@bookmark.ImageAltText"
+    >
+    <div class="flex flex-col justify-between p-4 leading-normal">
+      <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">
+        @bookmark.Title
+      </h5>
+      <p class="mb-3 font-normal text-gray-700 ">
+        @Html.Raw(bookmark.Content)
+      </p>
+    </div>
+  </a>
+}
 
