--- a/bkmarker/Pages/Index.cshtml
+++ b/bkmarker/Pages/Index.cshtml
@@ -13,7 +13,7 @@
   >
     <img 
       class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-48 md:rounded-none md:rounded-s-lg" 
-      src="@bookmark.ImageUrl" alt="@bookmark.ImageAltText"
+      src="@bookmark.GetImageUrl()" alt="@bookmark.ImageAltText"
     >
     <div class="flex flex-col justify-between p-4 leading-normal">
       <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">
