--- a/bkmarker/Pages/Account/Login.cshtml
+++ b/bkmarker/Pages/Account/Login.cshtml
@@ -1,7 +1,5 @@
 @page
 @model LoginModel
-
-
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <form method="post" class="max-w-sm mx-auto">
@@ -12,12 +10,12 @@
       Url
     </label>
     <input 
-      asp-for="LoginRequest!.Password"
+      asp-for="LoginRequest!.Username"
       class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg 
             focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 
             dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 
             dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" 
-      placeholder="https://localhost/" 
+      placeholder="Username" 
       required
     >
 
@@ -33,7 +31,8 @@
             focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 
             dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 
             dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" 
-      placeholder="https://localhost/" 
+      type="password"
+      placeholder="Password" 
       required
     >
   </div>
