--- a/bkmarker/Pages/Account/Register.cshtml
+++ b/bkmarker/Pages/Account/Register.cshtml
@@ -16,7 +16,7 @@
             focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 
             dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 
             dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" 
-      placeholder="https://localhost/" 
+      placeholder="Username" 
       required
     >
 
@@ -32,7 +32,8 @@
             focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 
             dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 
             dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" 
-      placeholder="https://localhost/" 
+      type="password"
+      placeholder="Password" 
       required
     >
   </div>
